Closed Bug 679794 Opened 14 years ago Closed 14 years ago

IonMonkey: Assertion failure: a.isGeneralReg(), at shared/CodeGenerator-shared-inl.h:51 (inside CodeGeneratorX64::visitDouble)

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: nbp, Assigned: nbp)

References

Details

Attachments

(2 files, 2 obsolete files)

Attached file Test case
Asserts on attached test case on IonMonkey, 64-bit with greedy register allocator.
Attachment #553827 - Flags: review?(dvander)
previous patch cause the following failure lately. The patch attached fix this new assertions and the test case is now running as expected. Assertion failure: from->isDouble() == to->isDouble(), at /mnt/data/home/nicolas/mozilla/ionmonkey/js/src/ion/shared/CodeGenerator-x86-shared.cpp:292
Attachment #553840 - Flags: review?
Attachment #553840 - Flags: review? → review?(dvander)
Comment on attachment 553836 [details] [diff] [review] Fix reported bug, temporary use a normal register to load immediate to xmm register. Nice catch.
Attachment #553836 - Flags: review?(dvander) → review+
The second patch appears to be empty - No review needed for test cases, just fold them into a patch. You can throw them in js/src/jit-tests/tests/ion
This patch contains the test case and the 2 previous patches (including the content of the missing one). This fix the bug for the greedy allocator on x86_64, It does not fix the assertion [1] raised when used with the linear scan register allocator. [1] Assertion failure: a.isFloatReg(), at ../ion/shared/CodeGenerator-shared-inl.h:70
Attachment #553836 - Attachment is obsolete: true
Attachment #553840 - Attachment is obsolete: true
Attachment #553840 - Flags: review?(dvander)
Attachment #554023 - Flags: review?(dvander)
Attachment #554023 - Flags: review?(dvander) → review+
(Turns out the temp-double part of the patch had been obsoleted by bug 677339, but the rest applied.) http://hg.mozilla.org/projects/ionmonkey/rev/6050e64e2903
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: