Bug 679794 - IonMonkey: Greedy Allocator: Fix x86-64 double load from immediate and type of stack slot [r=]

--HG--
extra : rebase_source : 4651be0390a5f780e53604bd01db9e65a46d605c